--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Tom Decroos - PhD Researcher in Machine Learning, Artificial Intelligence, and Soccer Analytics
-description: I am a 4th year PhD student in the DTAI Research group at KU Leuven working with Prof. [Jesse Davis](https://people.cs.kuleuven.be/~jesse.davis/). I research how to _learn_ from complex data streams (using both predictive and descriptive machine learning methods) with a focus on soccer analytics.
-logo: headshot_tom_small.jpg
+title: []
+description: []
+logo: []
