--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 theme: jekyll-theme-minimal
 gems: ["jemoji"]
+title: [Tom Decroos]
+description: [PhD Researcher in Machine Learning, Artificial Intelligence and Soccer Analytics]
+logo: [selfie_tom.jpg]
