--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 gems: ["jemoji"]
 title: ["Tom Decroos"]
-description: ["PhD Researcher in Machine Learning\, Artificial Intelligence and Soccer Analytics"]
+description: ["PhD Researcher in Machine Learning Artificial Intelligence and Soccer Analytics"]
