--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 gems: ["jemoji"]
 title: ["Tom Decroos"]
 description: ["PhD Researcher in Machine Learning"]
-logo: [selfie_tom.jpg]
+logo: ["selfie_tom.jpg"]
