--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 gems: ["jemoji"]
 title: ["Tom Decroos"]
 logo: selfie_tom.jpg
-description: ["PhD Researcher in Machine Learning, Artificial Intelligence and Soccer Analytics. Promotor: **Jesse Davis**"]
+description: ["PhD Researcher in Machine Learning, Artificial Intelligence and Soccer Analytics"]
