--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,2 @@
 gems: ["jemoji"]
-title: ["Tom Decroos"]
-logo: selfie_tom.jpg
-description: ["PhD Researcher in Machine Learning, Artificial Intelligence and Soccer Analytics"]
+title: "Tom Decroos - PhD Researcher in Machine Learning, Artificial Intelligence and Soccer Analytics"
