Set theme jekyll-theme-leap-day

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 gems: ["jemoji"]
 title: "Tom Decroos - PhD Researcher in Machine Learning, Artificial Intelligence and Soccer Analytics"
+
+theme: jekyll-theme-leap-day
