--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
 gems: ["jemoji"]
 title: "Tom Decroos - PhD Researcher in Machine Learning, Artificial Intelligence and Soccer Analytics"
+
+readme_index:
+  enabled:          true
+  remove_originals: false
+  with_frontmatter: True
