--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 gems: ["jemoji"]
-title: "Tom Decroos - PhD Researcher in Machine Learning, Artificial Intelligence and Soccer Analytics"
+title: "Tom Decroos"
